 syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
	rpc GetAll(IoTParams) returns (IoTList);
	rpc Get(IoTId) returns (IoTReading);
	rpc Create(IoTReading) returns (IoTReading);
	rpc Update(IoTReading) returns (IoTReading);
	rpc Delete(IoTId) returns (IoTReading);
}

// The request message containing the user's name.
message IoTReading
{
    string ts = 1;
    string device = 2;
    double co = 3;
    double humidity = 4;
    bool  light = 5;
    double lpg = 6;
    bool  motion = 7;
    double smoke = 8;
    double temp = 9;
}
message IoTList
{
	repeated IoTReading IoTReadings = 1;
}
message IoTId
{
    string ts = 1;
    string device = 2;
}
message IoTParams 
{
    int32 page_number = 1;
    int32 page_size = 2;
}
